# prettier-rs

./: .gitignore  Cargo.toml  package.json
src/: ast_path.rs  ast_printer.rs  ast_util.rs  doc.rs  doc_printer.rs  main.rs  src_cursor.rs
src/print_js/: array.rs  assign.rs  bin_expr.rs  call.rs  class.rs  comments.rs  function.rs  jsx.rs  mod.rs  module.rs  parens.rs  statement.rs  ternary.rs
