[package]
name = "prustier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
swc_common = "0.33.8"
swc_ecma_ast = "0.110.9"
swc_ecma_parser = "0.141.21"
swc_ecma_visit = { version = "0.96.10", features = ["path"] }
